--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Packing of weighed entities",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon server.js",
+    "start": "npm run server.js",
     "debug": "parcel --host 0.0.0.0 ./public/index.html"
   },
   "author": "Petro Dz.",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jquery": "^3.6.3",
