--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jquery": "^3.6.3",
     "parcel": "^2.8.3",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3"
   }
 }
