--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jquery": "^3.6.3",
     "parcel": "^2.8.3",
+    "sqlite3": "^5.1.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
