--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-    command: npm run docker
+    command: npm run prod
     # user: "1004:1001"
     volumes:
       - .:/app
